feat: port the tests